# advent-of-code-2021

./: Cargo.toml
advents/: day1part2.rs  day22part1.rs  day22part2.rs  day2part1.rs  day2part2.rs  day3part1.rs  day3part2.rs
data/: day1-real.csv  day1-test.csv  day2-real.csv  day2-test.csv  day22-real-plus.csv  day22-real.csv  day22-test with -50 to 50 subtractions.csv  day22-test-copy.csv  day22-test.csv  day22-test1-27.csv  day22-test2-46.csv  day22-test3-38.csv  day22-test4-39.csv  day22-test5-38.csv  day22-test6-26.csv  day22part2-test.csv  day3-real.csv  day3-test.csv
src/: main.rs
