[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0.132"
serde_derive = "1.0.132"

[[example]]
name = "day1part1"
path = "advents/day1part1.rs"

[[example]]
name = "day1part2"
path = "advents/day1part2.rs"

[[example]]
name = "day2part1"
path = "advents/day2part1.rs"

[[example]]
name = "day2part2"
path = "advents/day2part2.rs"

[[example]]
name = "day3part1"
path = "advents/day3part1.rs"